--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,9 +7,7 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview",
-    "start:mac": "bash ../scripts/start-mac.sh",
-    "start:win": "../scripts/start-win.bat"
+    "preview": "vite preview"
   },
   "dependencies": {
     "lucide-react": "^0.525.0",
