--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -14,7 +14,7 @@
     "forceConsistentCasingInFileNames": true, // 檔名大小寫一致檢查
     "rootDir": "src",      // 設定原始碼根目錄
     "outDir": "dist",      // 設定輸出目錄為 dist
-    "noEmit": false        // 允許輸出 JS 檔案
+    "noEmit": true        // 不輸出 JS 檔案
   },
   "include": ["src"],
   "exclude": ["node_modules", "dist"]
